[package]
name = "kmer_counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = "0.49.0"
clap = "4.0"
num_cpus = "1.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
